Add images for homepage

--- a/UI/index.html
+++ b/UI/index.html
@@ -17,12 +17,9 @@
         <p>Join Ride My Way community and save time
           <br> and money on your commute everyday
         </p>
-        <button>
-          <a href="./signup.html">Get Started</a>
-        </button>
+        <a class="btn btn__secondary btn__inline btn__rounded btn__inline" href="./signup.html">Get Started</a>
       </header>
     </div>
-
     <!-- Navigation -->
     <nav class="menu">
       <button aria-expanded="false" aria-controls="menu-list">
@@ -31,6 +28,11 @@
         Menu
       </button>
       <ul id="menu-list">
+        <li>
+          <a href="/index.html">
+            <img src="" alt="logo">
+          </a>
+        </li>
         <li>
           <a href="/index.html">Home</a>
         </li>
@@ -43,22 +45,29 @@
       </ul>
     </nav>
 
+
     <!-- Features -->
     <section class="features">
       <div class="feature">
-        <span class="icon"></span>
+        <div class="icon">
+          <img src="./images/confirmed.png" alt="">
+        </div>
         <h4>Easy Rides</h4>
         <p>Select your preferred rides and ride with only those you wish to. riding with your colleagues, friends, and family
           has never been easier.</p>
       </div>
       <div class="feature">
-        <span class="icon"></span>
+        <div class="icon">
+          <img src="./images/customer-care.png" alt="">
+        </div>
         <h4>24/7 Customer Care</h4>
         <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first before
           anything else.</p>
       </div>
       <div class="feature">
-        <span class="icon"></span>
+        <div class="icon">
+          <img src="./images/time-management.png" alt="">
+        </div>
         <h4>Ride on time</h4>
         <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your destination
           on time.</p>
