--- a/UI/index.html
+++ b/UI/index.html
@@ -48,11 +48,12 @@
 
     <!-- Features -->
     <section class="features">
+      <!-- <h4 class="feature-heading">Why Ride Wtih us</h4> -->
       <div class="feature">
         <div class="icon">
           <img src="./images/confirmed.png" alt="">
         </div>
-        <h4>Easy Rides</h4>
+        <h5>Easy Rides</h5>
         <p>Select your preferred rides and ride with only those you wish to. riding with your colleagues, friends, and family
           has never been easier.</p>
       </div>
@@ -60,7 +61,7 @@
         <div class="icon">
           <img src="./images/customer-care.png" alt="">
         </div>
-        <h4>24/7 Customer Care</h4>
+        <h5>24/7 Customer Care</h5>
         <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first before
           anything else.</p>
       </div>
@@ -68,7 +69,7 @@
         <div class="icon">
           <img src="./images/time-management.png" alt="">
         </div>
-        <h4>Ride on time</h4>
+        <h5>Ride on time</h5>
         <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your destination
           on time.</p>
       </div>
@@ -82,7 +83,7 @@
     </section>
 
     <footer class="footer">
-
+      <p>&copy; 2018. Made by Emmanuel</p>
     </footer>
   </div>
   <!-- End of wrapper-->
