--- a/UI/index.html
+++ b/UI/index.html
@@ -29,15 +29,15 @@
       </button>
       <ul id="menu-list">
         <li>
-          <a href="/index.html">
+          <a href="./index.html">
             <img src="" alt="logo">
           </a>
         </li>
         <li>
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
         <li>
-          <a href="./sigup.html">Sign Up</a>
+          <a href="./signup.html">Sign Up</a>
         </li>
         <li>
           <a href="./signin.html">Sign In</a>
