Add navigation to all pages

--- a/UI/index.html
+++ b/UI/index.html
@@ -18,7 +18,7 @@
         <ul style="padding-left: 0px;">
 
           <li class="logo">
-            <a href="#"> Ride My Way </a>
+            <a href="./index.html"> Ride My Way </a>
           </li>
 
           <section class="div_navbar_items">
@@ -48,31 +48,6 @@
       </header>
 
     </div>
-    <!-- <nav class="menu">
-      <button aria-expanded="false" aria-controls="menu-list">
-        <span class="open">☰</span>
-        Menu
-      </button>
-      <ul id="menu-list">
-        <li>
-          <a href="./index.html">
-            <img src="" alt="logo">
-          </a>
-        </li>
-        <li>
-          <a href="./index.html">Home</a>
-        </li>
-        <li>
-          <a href="./signup.html">Sign Up</a>
-        </li>
-        <li>
-          <a href="./signin.html">Sign In</a>
-        </li>
-      </ul>
-    </nav> -->
-
-
-
 
     <!-- Features -->
     <section class="features">
@@ -82,7 +57,7 @@
           <img src="./images/confirmed.png" alt="">
         </div>
         <h5>Easy Booking</h5>
-        <p>Select your preferred rides and ride with only those you wish to. riding with your colleagues, friends, and family
+        <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
           has never been easier.</p>
       </div>
       <div class="feature">
