--- a/UI/signin.html
+++ b/UI/signin.html
@@ -13,6 +13,32 @@
 
 <body>
   <div class="wrapper">
+    <!-- Navigation -->
+    <div class="navbar">
+
+      <ul style="padding-left: 0px;">
+
+        <li class="logo">
+          <a href="./index.html"> Ride My Way </a>
+        </li>
+
+        <section class="div_navbar_items">
+          <li class="navbar_items">
+            <a href="./index.html"> Home </a>
+          </li>
+          <li class="navbar_items">
+            <a href="./signup.html"> Sign Up </a>
+          </li>
+          <li class="navbar_items">
+            <a href="./signin.html"> Sign In </a>
+          </li>
+        </section>
+
+        <li class="icon">
+          <a href="#" onclick="navBarFunction()"> &#9776;</a>
+        </li>
+      </ul>
+    </div>
     <!-- Signup Form -->
     <div class="form-wrapper">
       <form action="" class="form">
@@ -32,6 +58,12 @@
       <p>&copy; 2018. Made by Emmanuel.</p>
     </footer>
   </div>
+
+  <script>
+    function navBarFunction() {
+      document.getElementsByClassName("navbar")[0].classList.toggle("responsive");
+    }
+  </script>
 </body>
 
 </html>
