Adjust features section in index.html

--- a/UI/index.html
+++ b/UI/index.html
@@ -51,8 +51,8 @@
 
     <!-- Features -->
     <section class="features">
-      <!-- <h4 class="feature-heading">Why Ride Wtih us</h4> -->
-      <div class="feature">
+      <h4 class="feature-heading">Why Ride With us</h4>
+      <div class="feature feature-1">
         <div class="icon">
           <img src="./images/confirmed.png" alt="">
         </div>
@@ -60,7 +60,7 @@
         <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
           has never been easier.</p>
       </div>
-      <div class="feature">
+      <div class="feature feature-2">
         <div class="icon">
           <img src="./images/customer-care.png" alt="">
         </div>
@@ -68,7 +68,7 @@
         <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first before
           anything else.</p>
       </div>
-      <div class="feature">
+      <div class="feature feature-3">
         <div class="icon">
           <img src="./images/time-management.png" alt="">
         </div>
