Add user profile image

--- a/UI/index.html
+++ b/UI/index.html
@@ -38,6 +38,7 @@
           </li>
         </ul>
       </div>
+      <!-- End of Navigation -->
 
       <header class="hero">
         <h1>Get the best deals on your rides</h1>
