--- a/UI/signin.html
+++ b/UI/signin.html
@@ -43,8 +43,8 @@
     <div class="form-wrapper">
       <form action="" class="form">
         <label class="form-label" for="signin">Sign In</label>
-        <input class="form-control" type="text" placeholder="Email">
-        <input class="form-control" type="text" placeholder="Password">
+        <input class="form-control" type="text" placeholder="Email" required>
+        <input class="form-control" type="text" placeholder="Password" required>
 
         <a class="btn btn__primary btn__inline" href="#">Sign In</a>
         <p>Not a member?
