Style user-profile

--- a/UI/index.html
+++ b/UI/index.html
@@ -31,6 +31,9 @@
             <li class="navbar_items">
               <a href="./signin.html"> Sign In </a>
             </li>
+            <li class="navbar_items">
+              <a href="./rides.html"> Rides </a>
+            </li>
           </section>
 
           <li class="icon">
@@ -50,9 +53,17 @@
 
     </div>
 
+    <div class="intro text-center">
+      <h4>Ride My Way In Your City</h4>
+      <p class="lead">
+        Wherever you are in Nigeria, count on Ride My Way for rides in minutes!
+        <br>From Lagos to Abuja, Ride My Way is only a few clicks away.
+      </p>
+    </div>
+
     <!-- Features -->
     <section class="features">
-      <h4 class="feature-heading">Why Ride With us</h4>
+      <h4 class="feature-heading">Why Ride With Us</h4>
       <div class="feature feature-1">
         <div class="icon">
           <img src="./images/confirmed.png" alt="">
