--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -42,30 +42,146 @@
 
     <div class="profile-page">
       <!-- Profile Image -->
-      <div class="profile-image">
+      <div class="profile-info">
         <img src="./images//user-image.png" alt="profile-img">
+        <h4 class="profie-name text-center">Shawn</h4>
       </div>
+
+      <hr>
 
       <!-- Number of rides given and taken -->
-      <div class="num-of-rides">
-        <p>Number of ride given</p>
-        <p>Number of ride taken</p>
+      <div class="num-of-rides mt-1">
+        <div class="num-ride">
+          <p>Number of rides given</p>
+          <span class="ride-num">20</span>
+        </div>
+
+        <div class="num-ride">
+          <p>Number of rides taken</p>
+          <span class="ride-num">50</span>
+        </div>
       </div>
 
+      <hr>
+
       <!-- Ride given -->
-      <div class="rides-given">
-        <div class="ride"></div>
-        <div class="ride"></div>
-        <div class="ride"></div>
-      </div>
-      <!-- Rides taken -->
-      <div class="rides-taken">
-        <div class="ride"></div>
-        <div class="ride"></div>
-        <div class="ride"></div>
+      <h4>Rides Given</h4>
+      <section class="features">
+        <div class="feature feature-1">
+          <div class="icon">
+            <img src="./images/confirmed.png" alt="">
+          </div>
+          <h5>Easy Booking</h5>
+          <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
+            has never been easier.</p>
+        </div>
+        <div class="feature feature-2">
+          <div class="icon">
+            <img src="./images/customer-care.png" alt="">
+          </div>
+          <h5>24/7 Customer Care</h5>
+          <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
+            before anything else.</p>
+        </div>
+        <div class="feature feature-3">
+          <div class="icon">
+            <img src="./images/time-management.png" alt="">
+          </div>
+          <h5>Ride on time</h5>
+          <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
+            destination on time.</p>
+        </div>
+        <div class="feature feature-1">
+          <div class="icon">
+            <img src="./images/confirmed.png" alt="">
+          </div>
+          <h5>Easy Booking</h5>
+          <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
+            has never been easier.</p>
+        </div>
+        <div class="feature feature-2">
+          <div class="icon">
+            <img src="./images/customer-care.png" alt="">
+          </div>
+          <h5>24/7 Customer Care</h5>
+          <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
+            before anything else.</p>
+        </div>
+        <div class="feature feature-3">
+          <div class="icon">
+            <img src="./images/time-management.png" alt="">
+          </div>
+          <h5>Ride on time</h5>
+          <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
+            destination on time.</p>
+        </div>
+      </section>
+
+      <!-- ================================================ -->
+      <!-- Rides Taken -->
+      <h4>Rides Taken</h4>
+      <section class="features">
+        <div class="feature feature-1">
+          <div class="icon">
+            <img src="./images/confirmed.png" alt="">
+          </div>
+          <h5>Easy Booking</h5>
+          <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
+            has never been easier.</p>
+        </div>
+        <div class="feature feature-2">
+          <div class="icon">
+            <img src="./images/customer-care.png" alt="">
+          </div>
+          <h5>24/7 Customer Care</h5>
+          <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
+            before anything else.</p>
+        </div>
+        <div class="feature feature-3">
+          <div class="icon">
+            <img src="./images/time-management.png" alt="">
+          </div>
+          <h5>Ride on time</h5>
+          <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
+            destination on time.</p>
+        </div>
+        <div class="feature feature-1">
+          <div class="icon">
+            <img src="./images/confirmed.png" alt="">
+          </div>
+          <h5>Easy Booking</h5>
+          <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
+            has never been easier.</p>
+        </div>
+        <div class="feature feature-2">
+          <div class="icon">
+            <img src="./images/customer-care.png" alt="">
+          </div>
+          <h5>24/7 Customer Care</h5>
+          <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
+            before anything else.</p>
+        </div>
+        <div class="feature feature-3">
+          <div class="icon">
+            <img src="./images/time-management.png" alt="">
+          </div>
+          <h5>Ride on time</h5>
+          <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
+            destination on time.</p>
+      </section>
       </div>
     </div>
+
   </div>
+  </div>
+
+
+  <!-- Javascript for responsive navigation -->
+  <script>
+    function navBarFunction() {
+      document.getElementsByClassName("navbar")[0].classList.toggle("responsive");
+    }
+  </script>
 </body>
 
 </html>
