--- a/UI/signup.html
+++ b/UI/signup.html
@@ -18,7 +18,9 @@
       <ul style="padding-left: 0px;">
 
         <li class="logo">
-          <a href="./index.html"> Ride My Way </a>
+          <a href="./index.html">
+            <img src="./images/ride-logo.png" alt="logo">
+          </a>
         </li>
 
         <section class="div_navbar_items">
