--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -18,7 +18,9 @@
       <ul style="padding-left: 0px;">
 
         <li class="logo">
-          <a href="./index.html"> Ride My Way </a>
+          <a href="./index.html">
+            <img src="./images/ride-logo.png" alt="logo">
+          </a>
         </li>
 
         <section class="div_navbar_items">
@@ -68,49 +70,31 @@
       <h4>Rides Given</h4>
       <section class="features">
         <div class="feature feature-1">
-          <div class="icon">
-            <img src="./images/confirmed.png" alt="">
-          </div>
           <h5>Easy Booking</h5>
           <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
             has never been easier.</p>
         </div>
         <div class="feature feature-2">
-          <div class="icon">
-            <img src="./images/customer-care.png" alt="">
-          </div>
           <h5>24/7 Customer Care</h5>
           <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
             before anything else.</p>
         </div>
         <div class="feature feature-3">
-          <div class="icon">
-            <img src="./images/time-management.png" alt="">
-          </div>
           <h5>Ride on time</h5>
           <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
             destination on time.</p>
         </div>
         <div class="feature feature-1">
-          <div class="icon">
-            <img src="./images/confirmed.png" alt="">
-          </div>
           <h5>Easy Booking</h5>
           <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
             has never been easier.</p>
         </div>
         <div class="feature feature-2">
-          <div class="icon">
-            <img src="./images/customer-care.png" alt="">
-          </div>
           <h5>24/7 Customer Care</h5>
           <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
             before anything else.</p>
         </div>
         <div class="feature feature-3">
-          <div class="icon">
-            <img src="./images/time-management.png" alt="">
-          </div>
           <h5>Ride on time</h5>
           <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
             destination on time.</p>
@@ -122,49 +106,31 @@
       <h4>Rides Taken</h4>
       <section class="features">
         <div class="feature feature-1">
-          <div class="icon">
-            <img src="./images/confirmed.png" alt="">
-          </div>
           <h5>Easy Booking</h5>
           <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
             has never been easier.</p>
         </div>
         <div class="feature feature-2">
-          <div class="icon">
-            <img src="./images/customer-care.png" alt="">
-          </div>
           <h5>24/7 Customer Care</h5>
           <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
             before anything else.</p>
         </div>
         <div class="feature feature-3">
-          <div class="icon">
-            <img src="./images/time-management.png" alt="">
-          </div>
           <h5>Ride on time</h5>
           <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
             destination on time.</p>
         </div>
         <div class="feature feature-1">
-          <div class="icon">
-            <img src="./images/confirmed.png" alt="">
-          </div>
           <h5>Easy Booking</h5>
           <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
             has never been easier.</p>
         </div>
         <div class="feature feature-2">
-          <div class="icon">
-            <img src="./images/customer-care.png" alt="">
-          </div>
           <h5>24/7 Customer Care</h5>
           <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
             before anything else.</p>
         </div>
         <div class="feature feature-3">
-          <div class="icon">
-            <img src="./images/time-management.png" alt="">
-          </div>
           <h5>Ride on time</h5>
           <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
             destination on time.</p>
@@ -173,6 +139,10 @@
     </div>
 
   </div>
+
+  <footer class="footer">
+    <p>&copy; 2018. Made by Emmanuel</p>
+  </footer>
   </div>
 
 
