Edit user proflie page

--- a/UI/index.html
+++ b/UI/index.html
@@ -19,7 +19,7 @@
 
           <li class="logo">
             <a href="./index.html">
-              <img src="./images/ride-logo.png" alt="logo"> </a>
+              <img src="./images/ride-logo-blue.png" alt="logo"> </a>
           </li>
 
           <section class="div_navbar_items">
@@ -46,10 +46,10 @@
 
       <header class="hero">
         <h1>Get the best deals on your rides</h1>
-        <p>Join Ride My Way community and save time
+        <h2>Join Ride My Way community and save time
           <br> and money on your commute everyday
-        </p>
-        <a class="btn btn__secondary btn__inline btn__rounded btn__inline" href="./signup.html">Get Started</a>
+        </h2>
+        <a class="btn btn__primary btn__inline btn__rounded btn__inline" href="./signup.html">Get Started</a>
       </header>
 
     </div>
