--- a/UI/rides.html
+++ b/UI/rides.html
@@ -19,7 +19,7 @@
 
         <li class="logo">
           <a href="./index.html">
-            <img src="./images/ride-logo.png" alt="logo">
+            <img src="./images/ride-logo-blue.png" alt="logo">
           </a>
         </li>
 
@@ -45,8 +45,10 @@
     </div>
     <!-- End of Navigation -->
 
+    <a class="btn btn__secondary" href="./create-ride.html">Create Ride</a>
+
     <!-- Features -->
-    <section class="rides">
+    <section class="rides mt-1">
       <h4 class="ride-heading">Available Rides</h4>
       <div class="ride ride-1">
         <div class="icon">
