--- a/UI/signin.html
+++ b/UI/signin.html
@@ -20,7 +20,7 @@
 
         <li class="logo">
           <a href="./index.html">
-            <img src="./images/ride-logo.png" alt="logo">
+            <img src="./images/ride-logo-blue.png" alt="logo">
           </a>
         </li>
 
