Make ride offer form

--- a/UI/rides.html
+++ b/UI/rides.html
@@ -46,8 +46,8 @@
     </div>
 
     <div class="ride-options">
-      <a href="" class="btn btn__primary btn__inline">Offer Ride</a>
-      <a href="" class="btn btn__primary btn__inline">Ride Requests</a>
+      <a href="./offer-ride.html" class="btn btn__primary btn__inline">Offer Ride</a>
+      <a href="./ride-requests.html" class="btn btn__primary btn__inline">Ride Requests</a>
     </div>
 
     <!-- Features -->
