Add rides link to all pages

--- a/UI/rides.html
+++ b/UI/rides.html
@@ -35,6 +35,9 @@
             <li class="navbar_items">
               <a href="./rides.html"> Rides </a>
             </li>
+            <li class="navbar_items">
+              <a href="./rides.html"> Rides </a>
+            </li>
           </section>
 
           <li class="icon">
