--- a/UI/signin.html
+++ b/UI/signin.html
@@ -34,6 +34,9 @@
           <li class="navbar_items">
             <a href="./signin.html"> Sign In </a>
           </li>
+          <li class="navbar_items">
+            <a href="./rides.html"> Rides </a>
+          </li>
         </section>
 
         <li class="icon">
