Remove inline styles from the pages

--- a/UI/index.html
+++ b/UI/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <div class="top">
       <!-- Navigation -->
-      <div class="navbar" style="box-shadow: none">
+      <div class="navbar box-shadow-none">
 
         <ul style="padding-left: 0px;">
 
