--- a/UI/offer-ride.html
+++ b/UI/offer-ride.html
@@ -46,7 +46,7 @@
       <!-- End of Navigation -->
 
       <!-- Offer Ride Form -->
-      <div class="offer-ride-form" style="padding-top: 100px; display: grid; justify-items: center;">
+      <div class="offer-ride-form">
         <form action="" class="form">
           <label class="form-label">Ride Offer</label>
           <input class="form-control" type="text" placeholder="Ride Name">
@@ -54,7 +54,7 @@
           <textarea class="form-control" name=" Descrption" placeholder="Description" id=" " cols="30 " rows="6 "></textarea>
           <input class="form-control " type="number" min="2" max="20" placeholder="Number of Passengers ">
 
-          <a class="btn btn__primary btn__inline " href="# ">Submit</a>
+          <a class="btn btn__primary btn__inline " href="#">Submit</a>
         </form>
       </div>
       <footer class="footer ">
