--- a/UI/offer-ride.html
+++ b/UI/offer-ride.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/form.css">
+  <link rel="stylesheet" href="./styles/offer-ride.css">
   <title>Ride my way</title>
 </head>
 
@@ -16,7 +17,7 @@
       <!-- Navigation -->
       <div class="navbar">
 
-        <ul style="padding-left: 0px;">
+        <ul>
 
           <li class="logo">
             <a href="./index.html">
