--- a/UI/rides.html
+++ b/UI/rides.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/rides.css">
   <title>Ride my way</title>
@@ -36,7 +38,9 @@
               <a href="./rides.html"> Rides </a>
             </li>
             <li class="navbar_items">
-              <a href="./rides.html"> Rides </a>
+              <a href="./ride-requests.html">
+                <i class="fa fa-bell" aria-hidden="true"></i>
+              </a>
             </li>
           </section>
 
@@ -50,7 +54,6 @@
 
     <div class="ride-options">
       <a href="./offer-ride.html" class="btn btn__primary btn__inline">Offer Ride</a>
-      <a href="./ride-requests.html" class="btn btn__primary btn__inline">Ride Requests</a>
     </div>
 
     <!-- Features -->
@@ -62,7 +65,7 @@
         </div>
         <h5>Ikorodu to Yaba</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-2">
         <div class="icon">
@@ -70,7 +73,7 @@
         </div>
         <h5>Ikeja to Maryland</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-3">
         <div class="icon">
@@ -78,7 +81,7 @@
         </div>
         <h5>Lagos to Ibadan</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-1">
         <div class="icon">
@@ -86,7 +89,7 @@
         </div>
         <h5>VI to Ikoyi</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-2">
         <div class="icon">
@@ -94,7 +97,7 @@
         </div>
         <h5>Obalende to Falomo</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-3">
         <div class="icon">
@@ -102,7 +105,7 @@
         </div>
         <h5>Mile 12 - CMS</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-1">
         <div class="icon">
@@ -110,7 +113,7 @@
         </div>
         <h5>Maryland to Ikorodu</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-2">
         <div class="icon">
@@ -118,7 +121,7 @@
         </div>
         <h5>Ojuelegba to Ikeja</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
       <div class="ride ride-3">
         <div class="icon">
@@ -126,7 +129,7 @@
         </div>
         <h5>Lagos to Ijebu</h5>
         <p></p>
-        <a href="" class="btn btn__secondary">View</a>
+        <a href="" class="btn btn__secondary btn-modal">View</a>
       </div>
     </section>
 
