--- a/UI/rides.html
+++ b/UI/rides.html
@@ -9,6 +9,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/rides.css">
+  <link rel="stylesheet" href="./styles/modal.css">
   <title>Ride my way</title>
 </head>
 
@@ -65,7 +66,8 @@
         </div>
         <h5>Ikorodu to Yaba</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
+
       </div>
       <div class="ride ride-2">
         <div class="icon">
@@ -73,7 +75,7 @@
         </div>
         <h5>Ikeja to Maryland</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-3">
         <div class="icon">
@@ -81,7 +83,7 @@
         </div>
         <h5>Lagos to Ibadan</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-1">
         <div class="icon">
@@ -89,7 +91,7 @@
         </div>
         <h5>VI to Ikoyi</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-2">
         <div class="icon">
@@ -97,7 +99,7 @@
         </div>
         <h5>Obalende to Falomo</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-3">
         <div class="icon">
@@ -105,7 +107,7 @@
         </div>
         <h5>Mile 12 - CMS</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-1">
         <div class="icon">
@@ -113,7 +115,7 @@
         </div>
         <h5>Maryland to Ikorodu</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-2">
         <div class="icon">
@@ -121,7 +123,7 @@
         </div>
         <h5>Ojuelegba to Ikeja</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
       </div>
       <div class="ride ride-3">
         <div class="icon">
@@ -129,9 +131,33 @@
         </div>
         <h5>Lagos to Ijebu</h5>
         <p></p>
-        <a href="" class="btn btn__secondary btn-modal">View</a>
+        <button id="btn-modal" class="btn btn__secondary">View</button>
+        <!-- <a href="" class="btn btn__secondary" id="btn-modal">View</a> -->
       </div>
     </section>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h4>Ride Details</h4>
+        </div>
+        <div class="modal-body">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat in, qui omnis quam magnam eaque magni veniams libero.
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button href="" class="btn">Cancel</button>
+          <button href="" class="btn btn__primary">Join</button>
+        </div>
+      </div>
+
+    </div>
+    <!-- closing container -->
 
     <footer class="footer">
       <p>&copy; 2018. Made by Emmanuel</p>
@@ -143,6 +169,40 @@
   <script>
     function navBarFunction() {
       document.getElementsByClassName("navbar")[0].classList.toggle("responsive");
+    }
+
+    // Modal Scripts
+    // Get the modal
+    var modal = document.getElementById('modal');
+
+    // Get the button that opens the modal
+    var btns = document.querySelectorAll("#btn-modal");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on the button, open the modal 
+    // btn.onclick = function () {
+    //   modal.style.display = "block";
+    // }
+
+
+    // When the user clicks on <span> (x), close the modal
+    function closeModal() {
+      modal.style.display = "none";
+    }
+    span.addEventListener("click", closeModal);
+
+    function displayModal() {
+      modal.style.display = "block";
+    }
+    btns.forEach(button => button.addEventListener("click", displayModal));
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
     }
   </script>
 </body>
