User profile page is loaded after signing in

--- a/UI/rides.html
+++ b/UI/rides.html
@@ -147,7 +147,13 @@
         </div>
         <div class="modal-body">
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat in, qui omnis quam magnam eaque magni veniams libero.
+            Destination: Ikeja
+          </p>
+          <p>
+            Time: 4:00pm
+          </p>
+          <p>
+            Seats Availalble: 3
           </p>
         </div>
         <div class="modal-footer">
