--- a/UI/signin.html
+++ b/UI/signin.html
@@ -51,7 +51,7 @@
         <input class="form-control" type="text" placeholder="Email" required>
         <input class="form-control" type="text" placeholder="Password" required>
 
-        <a class="btn btn__primary btn__inline" href="#">Sign In</a>
+        <a class="btn btn__primary btn__inline" href="./user-profile.html">Sign In</a>
         <p>Not a member?
           <a href="signup.html">Sign up</a>
         </p>
