--- a/UI/signup.html
+++ b/UI/signup.html
@@ -54,7 +54,7 @@
         <input class="form-control" type="text" placeholder="Email">
         <input class="form-control" type="text" placeholder="Create Password">
 
-        <a class="btn btn__primary btn__inline" href="#">Sign Up</a>
+        <a class="btn btn__primary btn__inline" href="./signin.html">Sign Up</a>
         <p>Already Registered?
           <a href="signin.html">Sign in</a>
         </p>
