--- a/UI/index.html
+++ b/UI/index.html
@@ -65,29 +65,34 @@
     <!-- Features -->
     <section class="features">
       <h4 class="feature-heading">Why Ride With Us</h4>
-      <div class="feature feature-1">
-        <div class="icon">
-          <img src="./images/confirmed.png" alt="">
+      <div class="features-grid">
+        <!-- feature one -->
+        <div class="feature feature-1">
+          <div class="icon">
+            <img src="./images/confirmed.png" alt="">
+          </div>
+          <h5>Easy Booking</h5>
+          <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
+            has never been easier.</p>
         </div>
-        <h5>Easy Booking</h5>
-        <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
-          has never been easier.</p>
-      </div>
-      <div class="feature feature-2">
-        <div class="icon">
-          <img src="./images/customer-care.png" alt="">
+        <!-- feature Two -->
+        <div class="feature feature-2">
+          <div class="icon">
+            <img src="./images/customer-care.png" alt="">
+          </div>
+          <h5>24/7 Customer Care</h5>
+          <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
+            before anything else.</p>
         </div>
-        <h5>24/7 Customer Care</h5>
-        <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first before
-          anything else.</p>
-      </div>
-      <div class="feature feature-3">
-        <div class="icon">
-          <img src="./images/time-management.png" alt="">
+        <!-- feature Three -->
+        <div class="feature feature-3">
+          <div class="icon">
+            <img src="./images/time-management.png" alt="">
+          </div>
+          <h5>Ride on time</h5>
+          <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
+            destination on time.</p>
         </div>
-        <h5>Ride on time</h5>
-        <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your destination
-          on time.</p>
       </div>
     </section>
 
