Change the color of the footer

--- a/UI/index.html
+++ b/UI/index.html
@@ -65,7 +65,7 @@
     <!-- Features -->
     <section class="features">
       <h4 class="feature-heading">Why Ride With Us</h4>
-      <div class="features-grid">
+      <div class="features-grid mt-1">
         <!-- feature one -->
         <div class="feature feature-1">
           <div class="icon">
