--- a/UI/index.html
+++ b/UI/index.html
@@ -97,9 +97,13 @@
     </section>
 
     <section class="about">
-      <img src="" alt="" class="about__mockup">
       <div class="about__details">
-
+        <h4 class="text-center">About Us</h4>
+        <p>
+          As the most reliable carpooling service, we help thousands of users, both passengers and drivers make the most of their rides.
+          Passengers have control over the rides they wish to join and drivers have control over rides they wish to accept.
+          Our cars span several routes in your city and we guarantee that you will never be stranded.
+        </p>
       </div>
     </section>
 
