--- a/UI/signin.html
+++ b/UI/signin.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles/form.css">
   <link rel="stylesheet" href="./styles/style.css">
 
-  <title>Document</title>
+  <title>Ride-My-Way</title>
 </head>
 
 <body>
@@ -30,12 +30,6 @@
           </li>
           <li class="navbar_items">
             <a href="./signup.html"> Sign Up </a>
-          </li>
-          <li class="navbar_items">
-            <a href="./signin.html"> Sign In </a>
-          </li>
-          <li class="navbar_items">
-            <a href="./rides.html"> Rides </a>
           </li>
         </section>
 
