--- a/UI/signup.html
+++ b/UI/signup.html
@@ -28,14 +28,7 @@
             <a href="./index.html"> Home </a>
           </li>
           <li class="navbar_items">
-            <a href="./signup.html"> Sign Up </a>
-          </li>
-          <li class="navbar_items">
             <a href="./signin.html"> Sign In </a>
-          </li>
-          <li class="navbar_items">
-            <a href="./rides.html"> Rides </a>
-          </li>
         </section>
 
         <li class="icon">
@@ -45,7 +38,7 @@
     </div>
 
     <!-- Signup Form -->
-    <div class="form-wrapper">
+    <div class="form-wrapper mt-1">
       <form action="" class="form">
         <label class="form-label">Sign Up</label>
         <input class="form-control" type="text" placeholder="First Name">
