--- a/UI/signup.html
+++ b/UI/signup.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Signup Form -->
-    <div class="form-wrapper mt-1">
+    <div class="form-wrapper">
       <form action="" class="form">
         <label class="form-label">Sign Up</label>
         <input class="form-control" type="text" placeholder="First Name">
